--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,9 @@ logging.level.io.spring.infrastructure.mybatis.mapper=DEBUG
 
 jwt.secret=nRvyYC4soFxBdZ-F-5Nnzz5USXstR1YylsTd-mA0aKtI9HUlriGrtkf-TiuDapkLiUCogO3JOK7kwZisrHp6wA
 jwt.sessionTime=86400
+
+amazonS3.accessKey = AKIA5EO5455GXG56I26M
+amazonS3.secretAccessKey = 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
+amazonS3.region = ap-southeast-2
+amazonS3.bucket = airbnb-clone-earthtul
+amazonS3.url = https://airbnb-clone-earthtul.s3.ap-southeast-2.amazonaws.com
