--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,7 @@ amazonS3.secretAccessKey = tbyp4eqUs1haHjhzLxGxJ27yGapbWqXX1VwMorBJ
 amazonS3.region = ap-southeast-2
 amazonS3.bucket = airbnb-clone-earthtul
 amazonS3.url = https://airbnb-clone-earthtul.s3.ap-southeast-2.amazonaws.com
+
+cloud.aws.credentials.access-key=AKIA5EO5455G7W5WO3MP
+cloud.aws.credentials.secret-key=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
+cloud.aws.region.static=ap-southeast-1
